RESOLVED FIXED65257
REGRESSION (r91125): Google Drawings is broken
https://bugs.webkit.org/show_bug.cgi?id=65257
Summary REGRESSION (r91125): Google Drawings is broken
Nico Weber
Reported 2011-07-27 07:50:20 PDT
1. Open this Google Drawing on Chrome Dev 14.0.835.0: https://docs.google.com/drawings/d/1EkA4V3ZWvnB-Gt6MBItiwvQESavOXpPWhdtMVarG9aI/edit?hl=en_US What is the expected result? There should be a blue box in the center of the drawing What happens instead? Nothing is rendered. Google Drawings just doesn't work on the latest version of Chrome Happens in webkit nighlies as well. This is http://crbug.com/90629
Attachments
repro? (3.87 KB, text/html)
2011-07-27 13:14 PDT, Nico Weber
no flags
Patch (6.16 KB, patch)
2011-07-27 19:31 PDT, Rob Buis
darin: review+
webkit.review.bot: commit-queue-
Rob Buis
Comment 1 2011-07-27 12:58:43 PDT
Maybe same problem as https://bugs.webkit.org/show_bug.cgi?id=64675 I posted an idea how to fix it on that bug.
Nico Weber
Comment 2 2011-07-27 13:04:03 PDT
You say "chromium specific" in bug 64675. This problem here happens in the webkit nightlies as well.
Rob Buis
Comment 3 2011-07-27 13:07:57 PDT
Hi Nico, (In reply to comment #2) > You say "chromium specific" in bug 64675. This problem here happens in the webkit nightlies as well. Oops, good point! I looked briefly, but inspector seemed partly disabled and the markup is unreadable to me as-is. Is it possible for someone to make a reduced testcase? Cheers, Rob.
Nico Weber
Comment 4 2011-07-27 13:14:32 PDT
Created attachment 102177 [details] repro? This might work as repro. I opened the devtools, clicked on the drawing, picked "Copy as HTML" in the context menu, and pasted that to a new file. The new file renders correctly in my current chrome dev channel, but not in the canary channel. It renders correctly in Ff4.
Rob Buis
Comment 5 2011-07-27 19:31:12 PDT
WebKit Review Bot
Comment 6 2011-07-27 22:27:57 PDT
Comment on attachment 102221 [details] Patch Attachment 102221 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/9262147 New failing tests: svg/custom/zero-path-square-cap-rendering2.svg
Alexey Proskuryakov
Comment 7 2011-07-27 22:53:10 PDT
Comment on attachment 102221 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=102221&action=review > Source/WebCore/rendering/svg/RenderSVGPath.cpp:156 > // Spec(11.4): Any zero length subpath shall not be stroked if the âstroke-linecapâ property has a value of butt Historically, non-ASCII text in code comments used to be breaking build on some platforms.
Darin Adler
Comment 8 2011-07-27 23:00:46 PDT
Comment on attachment 102221 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=102221&action=review >> Source/WebCore/rendering/svg/RenderSVGPath.cpp:156 >> // Spec(11.4): Any zero length subpath shall not be stroked if the âstroke-linecapâ property has a value of butt > > Historically, non-ASCII text in code comments used to be breaking build on some platforms. Yup; we’ve avoided it for that reason.
Rob Buis
Comment 9 2011-07-28 05:47:32 PDT
Landed in r91915.
Csaba Osztrogonác
Comment 11 2011-07-28 06:16:13 PDT
I skipped this test on Qt until fix: https://trac.webkit.org/changeset/91920
Note You need to log in before you can comment on or make changes to this bug.