2011-07-28  Rob Buis  <rbuis@rim.com>

REGRESSION (r91125): Google Drawings is broken
        https://bugs.webkit.org/show_bug.cgi?id=65257

        Reviewed by Darin Adler.

        Only consider zero-length path rendering code path when a stroke is defined.

        Test: svg/custom/zero-path-square-cap-rendering2.svg

        * rendering/svg/RenderSVGPath.cpp:
        (WebCore::RenderSVGPath::shouldStrokeZeroLengthSubpath):

Canonical link: https://commits.webkit.org/81076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91915 268f45cc-cd09-0410-ab3c-d52691b4dbfc